feat(SS): Security server maintenance mode management requests in UI
WIP, additional changes on UI, prevent disable and maintenance mode in case of management services provider, check for maintenance mode while making proxy requests

Refs: XRDDEV-2887